<resources>
    <string name="app_name">MediTrack</string>
    <string name="bmi_title">BMI</string>
    <string name="bmi_description">BMI, or Body Mass Index, is a measure assessing whether you have a healthy body weight for your height.</string>
    <string name="bmi_my_evaluation">Get my evaluation</string>
    <string name="metabolic_title">Metabolic Balance</string>
    <string name="metabolic_description">Evaluates metabolic health using body fat, blood pressure, and cholesterol indicators.</string>
    <string name="scroll_through_interpretations">(swipe left/right to cycle through interpretations)</string>
    <string name="default_web_client_id">YOUR_CLIENT_ID_HERE</string>
    <string name="interpretations">Interpretations</string>
    <string name="bmi_image">bmi_image</string>
    <string name="dashboard">Dashboard</string>
    <string name="disease_name">Disease Name</string>
    <string name="icd10_code">ICD10 Code</string>
    <string name="save">Save</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="heartbeat">Resting Heart Rate</string>
    <string name="body_fat">Body Fat Percentage</string>
    <string name="waist_circumference">Waist Circumference (cm)</string>
    <string name="blood_pressure_systolic">Blood Pressure Systolic</string>
    <string name="blood_pressure_diastolic">Blood Pressure Diastolic</string>
    <string name="blood_glucose">Blood Glucose (mg/dL)</string>
    <string name="cholesterol_total">Total Cholesterol (mg/dL)</string>
    <string name="cholesterol_hdl">HDL Cholesterol (mg/dL)</string>
    <string name="cholesterol_ldl">LDL Cholesterol (mg/dL)</string>
    <string name="submit">Submit</string>
    <string name="delete_button">delete_button</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="diseases">Diseases</string>
    <string name="firstQ">Physical State</string>
    <string name="wkyl_report">Report</string>
    <string name="get_wkly_rprt">Log Weekly Feedback</string>
    <string name="next_report_time">Next report available in: %1$s</string>
    <string name="BMIQ">Mental State</string>
    <string name="patients">Patients</string>
    <string name="gender">Gender</string>
    <string-array name="gender_options">
        <item>male</item>
        <item>female</item>
        <item>don\'t want to specify</item>
    </string-array>
</resources>
