<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
    <item
            android:id="@+id/menu_diseases"
            android:icon="@drawable/ic_diseases"
            android:title="@string/diseases" />
    <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
    <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
    <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
</menu>