<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="4dp">

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="1"
            android:padding="16dp">

        <TextView
                android:id="@+id/diseaseNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/disease_name"
                android:textSize="18sp"/>

        <TextView
                android:id="@+id/icd10TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/icd10_code"
                android:textSize="16sp"/>


        <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_row="0"
                android:layout_column="3"
                android:background="@android:color/transparent"
                android:contentDescription="@string/delete_button"/>

    </GridLayout>
</androidx.cardview.widget.CardView>