<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/white">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/inner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

        <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                android:layout_marginTop="25dp"
                android:src="@drawable/title_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextCnpLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="CNP"
                app:boxStrokeColor="@color/logoColorRed"
                app:hintTextColor="@color/logoColorRed"
                app:layout_constraintTop_toBottomOf="@+id/image"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCnp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:boxStrokeColor="@color/logoColorRed"
                app:hintTextColor="@color/logoColorRed"
                app:layout_constraintTop_toBottomOf="@+id/editTextCnpLayout"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextAgeLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                app:boxStrokeColor="@color/logoColorRed"
                app:hintTextColor="@color/logoColorRed"
                app:layout_constraintTop_toBottomOf="@+id/editTextNameLayout"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextHeightLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                app:boxStrokeColor="@color/logoColorRed"
                app:hintTextColor="@color/logoColorRed"
                app:layout_constraintTop_toBottomOf="@+id/editTextAgeLayout"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextWeightLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                app:boxStrokeColor="@color/logoColorRed"
                app:hintTextColor="@color/logoColorRed"
                app:layout_constraintTop_toBottomOf="@+id/editTextHeightLayout"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextBodyFatLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/body_fat"
                app:boxStrokeColor="@color/logoColorRed"
                app:hintTextColor="@color/logoColorRed"
                app:layout_constraintTop_toBottomOf="@+id/editTextWeightLayout"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextBodyFat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextBPSystolicLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blood_pressure_systolic"
                app:boxStrokeColor="@color/logoColorRed"
                app:hintTextColor="@color/logoColorRed"
                app:layout_constraintTop_toBottomOf="@+id/editTextBodyFatLayout"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextBPSystolic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextBPDiastolicLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blood_pressure_diastolic"
                app:boxStrokeColor="@color/logoColorRed"
                app:hintTextColor="@color/logoColorRed"
                app:layout_constraintTop_toBottomOf="@+id/editTextBPSystolicLayout"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextBPDiastolic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextHRLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/heartbeat"
                app:boxStrokeColor="@color/logoColorRed"
                app:hintTextColor="@color/logoColorRed"
                app:layout_constraintTop_toBottomOf="@+id/editTextBPDiastolicLayout"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextHR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextBloodGlucoseLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blood_glucose"
                app:boxStrokeColor="@color/logoColorRed"
                app:hintTextColor="@color/logoColorRed"
                app:layout_constraintTop_toBottomOf="@+id/editTextHRLayout"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextBloodGlucose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextCholesterolTotalLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cholesterol_total"
                app:boxStrokeColor="@color/logoColorRed"
                app:hintTextColor="@color/logoColorRed"
                app:layout_constraintTop_toBottomOf="@+id/editTextBloodGlucoseLayout"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCholesterolTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextCholesterolHDLLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cholesterol_hdl"
                app:boxStrokeColor="@color/logoColorRed"
                app:hintTextColor="@color/logoColorRed"
                app:layout_constraintTop_toBottomOf="@+id/editTextCholesterolTotalLayout"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCholesterolHDL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextCholesterolLDLLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cholesterol_ldl"
                app:boxStrokeColor="@color/logoColorRed"
                app:hintTextColor="@color/logoColorRed"
                app:layout_constraintTop_toBottomOf="@+id/editTextCholesterolHDLLayout"
                app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCholesterolLDL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:id="@+id/credentialsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCholesterolLDLLayout"
                android:layout_marginTop="16dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Generated Credentials"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/logoColorRed"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Username: "
                        android:textStyle="bold"
                        android:textSize="14sp"/>

                <TextView
                        android:id="@+id/textViewGeneratedUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Password: "
                        android:textStyle="bold"
                        android:textSize="14sp"/>

                <TextView
                        android:id="@+id/textViewGeneratedPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/bodyTypeContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/credentialsContainer"
                android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonBodyTypeQuiz"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="Body Type"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:minWidth="100dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:backgroundTint="@color/logoColor"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <TextView
                    android:id="@+id/textViewBodyType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/logoColorRed"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSubmitProfile"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:backgroundTint="@color/logoColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bodyTypeContainer"
                android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:transitionName="bottomNavTransition"
            app:labelVisibilityMode="selected"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
