<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dashboard"
            android:scaleType="centerCrop"
            android:layout_marginTop="25dp"
            android:src="@drawable/title_dashboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/health_widgets_recyclerview"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:id="@+id/image_interpretation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/interpretations"
            android:scaleType="centerCrop"
            android:layout_marginTop="25dp"
            android:src="@drawable/title_interpretations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/health_widgets_recyclerview" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/disease_recyclerview"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_interpretation" />


        <TextView
                android:id="@+id/disease_subtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scroll_through_interpretations"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/disease_recyclerview"
                app:layout_constraintStart_toStartOf="@id/disease_recyclerview"
                app:layout_constraintEnd_toEndOf="@id/disease_recyclerview"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:transitionName="bottomNavTransition"
            app:labelVisibilityMode="selected"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_navigation_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
